[package]
name = "ipcrust"
authors = ["Pavle Obradovic <pobradovic08@gmail.com>"]
license = "GPL-3"
description = "IP calculator written in Rust"
version = "0.2.1"
edition = "2021"

keywords = ['cli', 'ip', 'network', 'calculator']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3